# django-curtains

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
curtains/: basic_auth.py  ip_networks.py  middleware.py  only_staff.py
only_staff/: middleware.py
tests/testapp/: settings.py  test_basic_auth.py  test_ip_networks.py  test_only_staff.py  urls.py
