[metadata]
name = django_curtains
version = attr: curtains.__version__
description = Middleware for only allowing access to staff members
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-curtains/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *curtains*
    *tests*
omit =
    *migrations*
    *.tox*
